--- a/monitor/Pinpoint/docker/1.Docker下，pinpoint环境搭建.md
+++ b/monitor/Pinpoint/docker/1.Docker下，pinpoint环境搭建.md
@@ -28,6 +28,7 @@ pinpoint-server，材料列表
 pinpoint-server镜像的Dockerfile
 关于镜像文件的Dockerfile，如下所示，关键位置都加了注释，就不多说了：
 
+```Dockerfile
 # Docker image of pinpoint server
 # VERSION 0.0.1
 # Author: bolingcavalry
@@ -106,84 +107,7 @@ ENV PATH=$JAVA_HOME/bin:$HBASE_HOME/bin:$PATH
 EXPOSE 60010
 EXPOSE 18080
 EXPOSE 28080
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
-47
-48
-49
-50
-51
-52
-53
-54
-55
-56
-57
-58
-59
-60
-61
-62
-63
-64
-65
-66
-67
-68
-69
-70
-71
-72
-73
-74
-75
-76
-77
-78
+```
 在Dockerfile所在目录下执行以下命令可以构建本地镜像，上述所有材料也要放在这个目录：
 
 docker build -t bolingcavalry/centos67-hbase126-pinpoint163-server:0.0.1
@@ -214,7 +138,7 @@ CATALINA_OPTS="$CATALINA_OPTS -Dpinpoint.applicationName=$PINPOINT_APPLICATION_N
 3
 pinpoint-agent镜像的Dockerfile
 关于镜像文件的Dockerfile，如下所示，关键位置都加了注释，就不多说了：
-
+```Dockerfile
 # docker image for pinpoint agent
 # VERSION 0.0.1
 # Author: bolingcavalry
@@ -269,62 +193,9 @@ RUN mkdir $AGENT_WORK_PATH
 
 #把collector文件夹复制到工作目录
 COPY ./$AGENT_PACKAGE_NAME $AGENT_WORK_PATH/$AGENT_PACKAGE_NAME
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
-47
-48
-49
-50
-51
-52
-53
-54
+```
 在Dockerfile所在目录下执行以下命令可以构建本地镜像，上述所有材料也要放在这个目录：
 
 docker build -t bolingcavalry/centos67-pinpoint163-agent:0.0.1
-1
+
 以上就是制作pinpoint-sever和pinpoint-agent镜像的过程，用这样的镜像，结合上一章《Docker下，极速体验pinpoint1.6.3》的配置和启动，就能轻松构建一个完整的pinpoint环境；
