--- a/program/java/spring-cloud/zuul/1.路由器/10.application.properties.md
+++ b/program/java/spring-cloud/zuul/1.路由器/10.application.properties.md
@@ -3,6 +3,8 @@
 使用Spring Cloud Zuul实现动态路由 - CSDN博客 https://blog.csdn.net/mn960mn/article/details/51832753
 
 ```conf
+#ribbon.eureka.enabled=false ribbon.zookeeper.enabled=false 的配置下以下配置才会生效(非服务发现方式)
+
 server.port=8181
  
 #这里的配置表示，访问/baidu/** 直接重定向到http://www.baidu.com
