--- a/program/java/hadoop/13.mahout/1.classify-20newsgroups/13.构建贝叶斯文本分类器.md
+++ b/program/java/hadoop/13.mahout/1.classify-20newsgroups/13.构建贝叶斯文本分类器.md
@@ -43,21 +43,10 @@ sport文件夹：
 user-sport：
 待分类的文本
 
-
-
-
-
 注意：user-sport文件夹下的子文件夹名称是用户id，子文件夹内包含了多个文本文件，都是该用户浏览过的文章。
-step2：对sport文件夹进行分词
+
+## step2：对sport文件夹进行分词
 用到MRTokenize.jar中的tokenize.TokenizeDriver
-
-
-
-
-
-
-
-
 
 到此为止，原始数据已经分好词，并且已经处理成Mahout训练文本分类器要求的输入格式：
 每行一篇文章
@@ -77,19 +66,19 @@ grunt> store train into '/dataguru/hadoopdev/week8/train';
 结果截图：
  
 
-Step4：训练贝叶斯模型
+## Step4：训练贝叶斯模型
 我们分别训练bayes模型和cbayes模型，后面测试两者的效果做对比。
 
 首先训练bayes模型：
-casliyang@singlehadoop:~$ mahout trainclassifier -i /dataguru/hadoopdev/week8/train -o /dataguru/hadoopdev/week8/model-bayes -type bayes -ng 1 -source hdfs
+mahout trainclassifier -i /dataguru/hadoopdev/week8/train -o /dataguru/hadoopdev/week8/model-bayes -type bayes -ng 1 -source hdfs
 
  
 然后训练cbayes模型：
-casliyang@singlehadoop:~$ mahout trainclassifier -i /dataguru/hadoopdev/week8/train -o /dataguru/hadoopdev/week8/model-cbayes -type cbayes -ng 1 -source hdfs
+mahout trainclassifier -i /dataguru/hadoopdev/week8/train -o /dataguru/hadoopdev/week8/model-cbayes -type cbayes -ng 1 -source hdfs
 
 训练结果：
  
-Step5：测试模型
+## Step5：测试模型
 测试贝叶斯模型命令如下：
 casliyang@singlehadoop:~$ mahout testclassifier -d /dataguru/hadoopdev/week8/test -m /dataguru/hadoopdev/week8/model-bayes -type bayes -ng 1 -source hdfs -method mapreduce
 
@@ -104,9 +93,6 @@ casliyang@singlehadoop:~$ mahout testclassifier -d /dataguru/hadoopdev/week8/tes
 Step5：处理待分类数据
 我们的待分类数据全存储在user-sport文件夹下，每个子文件夹都存储了一个用户浏览过的文章，子文件夹的名称就是用户id：
  
-
-
-
 Mahout的文本分类器要求输入数据为分词后的文章，我们直接使用训练分类器时用到的MRTokenize.jar中的tokenize.TokenizeDriver来对文章进行分词，输出格式为：
 每行一篇文章
 每行的格式为：用户ID 文章分词结果
@@ -151,7 +137,7 @@ grunt> store u_stat into '/dataguru/hadoopdev/week8/user-sport-pigout';
 
 附Hadoop环境下调用Mahout分类器的程序MRClassify：▼查看关于本篇文章更多信息
     Mapper:
-
+```java
 package classifier;
  
 import java.io.IOException;
@@ -256,8 +242,9 @@ public class ClassifierMapper extends Mapper<Text, Text, Text, IntWritable> {
  
  
 }
+```
 Reducer:
-
+```java
 package classifier;
  
 import java.io.IOException;
@@ -283,14 +270,17 @@ public class ClassifierReducer extends Reducer<Text, IntWritable, NullWritable, 
 		context.write(NullWritable.get(), outValue);
 	}
 }
+```
 Counter：
+```java
 package classifier;
  
 public enum Counter {
 	FAILDOCS
 }
-
+```
 Driver：
+```java
 package classifier;
  
 import java.io.IOException;
@@ -365,3 +355,4 @@ public class ClassifierDriver {
 	}
  
 }
+```
