--- a/program/java/hadoop/13.mahout/1.classify-20newsgroups/16.通过Mahout构建贝叶斯文本分类器案例详解.md
+++ b/program/java/hadoop/13.mahout/1.classify-20newsgroups/16.通过Mahout构建贝叶斯文本分类器案例详解.md
@@ -61,18 +61,14 @@ step2：对sport文件夹进行分词
 
 
 
-
-
-
-
-
-
 到此为止，原始数据已经分好词，并且已经处理成Mahout训练文本分类器要求的输入格式：
 每行一篇文章
 每行的格式为：分类名称 文章分词结果
-Step3：划分训练集和测试集
+
+## Step3：划分训练集和测试集
 我们把经过分词处理的原始数据划分为训练集和测试集，训练集用于训练模型，测试集用于测试模型效果。
 该过程通过pig实现：
+```sh
 grunt> processed = load'/dataguru/hadoopdev/week8/fenciout/part-r-00000' as (category:chararray,doc:chararray);
 grunt> test = sample processed 0.2;
 grunt> jnt = join processed by (category,doc) left outer, test by (category,doc);
@@ -81,25 +77,19 @@ grunt> train = foreach filt_test generate processed::category as category,proces
 grunt> store test into '/dataguru/hadoopdev/week8/test';
 
 grunt> store train into '/dataguru/hadoopdev/week8/train';
+```
 
-结果截图：
- 
-
-Step4：训练贝叶斯模型
+## Step4：训练贝叶斯模型
 我们分别训练bayes模型和cbayes模型，后面测试两者的效果做对比。
 
 首先训练bayes模型：
-casliyang@singlehadoop:~$ mahout trainclassifier -i /dataguru/hadoopdev/week8/train -o /dataguru/hadoopdev/week8/model-bayes -type bayes -ng 1 -source hdfs
-
- 
+bin/mahout trainclassifier -i /dataguru/week8/train -o /dataguru/week8/model-bayes -type bayes -ng 1 -source hdfs
 然后训练cbayes模型：
-casliyang@singlehadoop:~$ mahout trainclassifier -i /dataguru/hadoopdev/week8/train -o /dataguru/hadoopdev/week8/model-cbayes -type cbayes -ng 1 -source hdfs
+bin/mahout trainclassifier -i /dataguru/hadoopdev/week8/train -o /dataguru/hadoopdev/week8/model-cbayes -type cbayes -ng 1 -source hdfs
 
-训练结果：
- 
-Step5：测试模型
+## Step5：测试模型
 测试贝叶斯模型命令如下：
-casliyang@singlehadoop:~$ mahout testclassifier -d /dataguru/hadoopdev/week8/test -m /dataguru/hadoopdev/week8/model-bayes -type bayes -ng 1 -source hdfs -method mapreduce
+bin/mahout testclassifier -d /dataguru/hadoopdev/week8/test -m /dataguru/hadoopdev/week8/model-bayes -type bayes -ng 1 -source hdfs -method mapreduce
 
 测试结果：
  
