--- a/program/java/hadoop/13.mahout/1.classify-20newsgroups/2.基于Mahout 命令参数含义.md
+++ b/program/java/hadoop/13.mahout/1.classify-20newsgroups/2.基于Mahout 命令参数含义.md
@@ -1,41 +1,23 @@
 【Mahout一】基于Mahout 命令参数含义 - bit1129的博客 - ITeye博客 http://bit1129.iteye.com/blog/2213708
 
-1. mahout seqdirectory
+## 1. mahout seqdirectory
 
- 
-
-Java代码  收藏代码
-$ mahout seqdirectory   
+mahout seqdirectory   
     --input (-i) input               Path to job input directory(原始文本文件).  
     --output (-o) output             The directory pathname for output.（<Text,Text>Sequence File）  
     -ow  
- 
 
- 
+bin/mahout seqdirectory -i /dataguru/week8/train-seq -o /dataguru/week8/train-vectors -ow
 
 功能： 将原始文本数据集转换为< Text, Text > SequenceFile
 
- 
-
- 
-
- 
-
-2. mahout seq2sparke
-
- 
+## 2. mahout seq2sparke
 
 功能： Convert and preprocesses the dataset（<Text,Text> SequenceFile） into a < Text, VectorWritable > SequenceFile containing term frequencies for each document.
-
 即根据Sequence File转换为tfidf向量文件
 
 说明：If we wanted to use different parsing methods or transformations on the term frequency vectors we could supply different options here e.g.: -ng 2 for bigrams or -n 2 for L2 length normalization
 
- 
-
- 
-
-Java代码  收藏代码
 mahout seq2sparse                           
   --output (-o) output             The directory pathname for output.          
   --input (-i) input               Path to job input directory.                
@@ -67,17 +49,11 @@ mahout seq2sparse
 
 -nv 指定该参数，那么输出的向量是NamedVectors
 
- 
-
-3. mahout split
-
- 
+## 3. mahout split
 
 功能：Split the preprocessed dataset into training and testing sets.
 
 将预处理的tfidf向量集转换为training和testing向量集
-
- 
 
 Java代码  收藏代码
 $ mahout split   
@@ -86,19 +62,14 @@ $ mahout split
     --testOutput ${WORK_DIR}/20news-test-vectors    
     --randomSelectionPct 40   
     --overwrite --sequenceFiles -xm sequential  
- 
 
 说明：如上是将向量数据集分为训练数据和检测数据，以随机40-60拆分
 
  
 
-3. mahout trainnb
-
- 
+## 3. mahout trainnb
 
 功能：训练分类器
-
- 
 
 Java代码  收藏代码
 mahout trainnb  
@@ -116,28 +87,16 @@ mahout trainnb
  
 
 -i 输入路径
-
 -o 输出路径
-
 -a
-
 -c 补偿性训练
-
 -li label index文件的目录
-
 -ow 指定该参数，删除输出目录
-
 tempDir MapReduce作业的中间结果
-
 startPhase 运行的第一个阶段
-
 endPhase 运行的最后一个阶段
 
- 
-
-4. mahout testnb
-
- 
+## 4. mahout testnb
 
 功能：检验Bayes分类器
 
