--- a/program/java/hadoop/13.mahout/1.安装/6.Mahout 0.12.1安装和使用.md
+++ b/program/java/hadoop/13.mahout/1.安装/6.Mahout 0.12.1安装和使用.md
@@ -31,7 +31,7 @@ export PATH=$PATH:$HADOOP_HOME/bin
 export HADOOP_HOME_WARN_SUPPRESS=not_null
 
 
-四、验证Mahout是否安装成功
+## 四、验证Mahout是否安装成功
 $mahout，执行
 若列出一些算法，则成功
 root@spark:/usr/local/mahout/apache-mahout-distribution-0.12.1# mahout
@@ -51,7 +51,7 @@ Valid program names are:
 。。。
 
 
-五、Mahout使用（一）
+## 五、Mahout使用（一）
 5.1、启动Hadoop
 （Hadoop安装可参考本人其他博文的链接）
 /usr/local/hadoop/hadoop-2.6.2/sbin/start-dfs.sh
