--- a/program/java/hadoop/13.mahout/2.classify-20newsgroups/1.用朴素贝叶斯对20Newsgroups.0.13.md
+++ b/program/java/hadoop/13.mahout/2.classify-20newsgroups/1.用朴素贝叶斯对20Newsgroups.0.13.md
@@ -1,12 +1,3 @@
-Mahout 用朴素贝叶斯对20 Newsgroups 数据分类的案例 - CSDN博客 https://blog.csdn.net/Ichimaru_Gin_/article/details/79133935
-
-源起
-《Mahout in Action(Mahout 实战)》这本书的第14.6节有一个用朴素贝叶斯对20 Newsgroups 进行数据分类的案例，但是由于该出出版使用的是mahout0.6版本进行的实验，我用目前最新的0.13版本已经不能再重复这个实验了（mahout做了很多改动）。
-
-ERROR MahoutDriver: : Try the new vector backed naivebayes classifier see examples/bin/classify-20newsgroups.sh
-对于这个实验可以参考mahout官网给出的教程，Twenty Newsgroups Classification Example
-
-下面是我根据官网的描述的做的实验过程（其实大家跟着官网做是一样的，而且解释的还权威。。。）
 
 ```sh
 ### 1. 将数据集上传到hadoop文件系统
@@ -37,4 +28,11 @@ mahout trainnb -i 20news-vectors-test/tfidf-vectors -o nbmodel -li labelindex -o
 mahout testnb -i 20news-vectors-test/tfidf-vectors -m nbmodel -l labelindex -ow -o 20news-testing -c
 ### 6 控制台会打印出结果
 # 但是我的正确率竟然只有5%。。。肯定是有问题了，这个还需要再分析，但是基本的过程就是这样
+### 7. 导出数据
+bin/mahout seqdumper -i /user/root/20news-vectors-test/tfidf-vectors/part-r-00000 -o ./20news_testing.res
 ```
+
+## 参考
+
+1. https://blog.csdn.net/Ichimaru_Gin_/article/details/79133935
+2. https://blog.csdn.net/hechenghai/article/details/50351718
