--- a/program/java/spring-cloud/zuul/3.修改url/4.dynamically-re-route-all-zuul-proxied-requests-to-single-url.md
+++ b/program/java/spring-cloud/zuul/3.修改url/4.dynamically-re-route-all-zuul-proxied-requests-to-single-url.md
@@ -1,7 +1,7 @@
 https://stackoverflow.com/questions/42588698/dynamically-re-route-all-zuul-proxied-requests-to-single-url
 
 First, use PRE_TYPE instead of ROUTE_TYPE (aka "route")
-
+```java
 @Override
 public String filterType() {
     return FilterConstants.PRE_TYPE;
@@ -23,6 +23,7 @@ public Object run() {
 
     return null;
 }
+```
 Finally, override forwarding url in the code (//your code). And you have to specify at least one route (cause zuul filters don't work if there are no routes) to proxy "not outaged" requests to the same host 8080 like this
 
 zuul.routes.api.path=/api/**
