--- a/program/java/hadoop/13.mahout/2.classify-20newsgroups/1.用朴素贝叶斯对20Newsgroups.0.13.md
+++ b/program/java/hadoop/13.mahout/2.classify-20newsgroups/1.用朴素贝叶斯对20Newsgroups.0.13.md
@@ -23,6 +23,7 @@ mahout seqdirectory -i /20news/20news-bydate-train/ -o 20news-sql -ow
 # 对样本进行向量化处理
 mahout seq2sparse -i 20news-sql -o 20news-vectors-test -lnorm -nv -wt tfidf
 ### 4. Train the classifier
+# The default is to train a Bayes model. The -c option is given to train a CBayes model:
 mahout trainnb -i 20news-vectors-test/tfidf-vectors -o nbmodel -li labelindex -ow -c
 ### 5. Test the classifier
 mahout testnb -i 20news-vectors-test/tfidf-vectors -m nbmodel -l labelindex -ow -o 20news-testing -c
@@ -32,7 +33,20 @@ mahout testnb -i 20news-vectors-test/tfidf-vectors -m nbmodel -l labelindex -ow 
 bin/mahout seqdumper -i /user/root/20news-vectors-test/tfidf-vectors/part-r-00000 -o ./20news_testing.res
 ```
 
+朴素贝叶斯分类是一种十分简单的分类算法，朴素贝叶斯的思想基础是这样的：对于给出的待分类项，求解在此项出现的条件下各个类别出现的概率哪个最大，就认为此待分类项属于哪个类别。
+
+这二十个新闻组数据集合是收集大约20,000新闻组文档，均匀的分布在20个不同的集合。这20个新闻组集合采集最近流行的数据集合到文本程序中作为实验，根据机器学习技术。例如文本分类，文本聚集。我们将使用Mahout的Bayes Classifier创造一个模型，它将一个新文档分类到这20个新闻组集合范例演示
+
+这个混合矩阵的意思说明：`上述a到u分别是代表了有20类别`，这就是我们之前给的20个输入文件，列中的数据说明每个类别中被分配到的字节个数，classified说明应该被分配到的总数
+
+381  0  0  0  0  9  1  0  0  0  1  0  0  2  0  1  0  0  3  0  0  |  398  a = rec.motorcycles
+
+意思为rec.motorcycles 本来是属于 a，有381篇文档被划为了a类，这个是正确的数据，其它的分别表示划到 b~u类中的数目。我们可以看到其正确率为 381/398=0.9573 ,可见其正确率还是很高的了。
+
 ## 参考
 
 1. https://blog.csdn.net/Ichimaru_Gin_/article/details/79133935
 2. https://blog.csdn.net/hechenghai/article/details/50351718
+3. https://mahout.apache.org/users/classification/bayesian.html
+4. https://mahout.apache.org/users/classification/twenty-newsgroups.html
+5. https://www.cnblogs.com/shishanyuan/archive/2015/01/12/4205209.html
