--- a/program/java/hadoop/13.mahout/2.classify-20newsgroups/16.通过Mahout构建贝叶斯文本分类器案例详解.md
+++ b/program/java/hadoop/13.mahout/2.classify-20newsgroups/16.通过Mahout构建贝叶斯文本分类器案例详解.md
@@ -99,7 +99,7 @@ casliyang@singlehadoop:~$ mahout testclassifier -d /dataguru/hadoopdev/week8/tes
 
 测试结果：
  
-Step5：处理待分类数据
+## Step5：处理待分类数据
 我们的待分类数据全存储在user-sport文件夹下，每个子文件夹都存储了一个用户浏览过的文章，子文件夹的名称就是用户id：
  
 
@@ -114,13 +114,13 @@ casliyang@singlehadoop:~/Myfiles$ hadoop jar MRTokenize.jar tokenize.TokenizeDri
 
 结果：
  
-Step6：Hadoop环境下，对待分类数据进行分类，并统计每个用户浏览每个分类的次数
+## Step6：Hadoop环境下，对待分类数据进行分类，并统计每个用户浏览每个分类的次数
 Hadoop环境下调用Mahout分类器的程序细节参见：
 第八周（4）文本挖掘-贝叶斯-Mahout
 将程序打jar包后拷贝到集群上执行。
 
 执行命令对待分类数据进行分类：
-casliyang@singlehadoop:~/Myfiles$ hadoop jar MRClassify.jar classifier.ClassifierDriver /dataguru/hadoopdev/week8/user-sport-fenciout /dataguru/hadoopdev/week8/user-sport-bayesout /dataguru/hadoopdev/week8/model-bayes bayes
+hadoop jar MRClassify.jar classifier.ClassifierDriver /dataguru/hadoopdev/week8/user-sport-fenciout /dataguru/hadoopdev/week8/user-sport-bayesout /dataguru/hadoopdev/week8/model-bayes bayes
 
 说明：
 参数1：输入路径，即上一步分词处理好的待分类的文章存储路径
