--- a/program/java/JVM/8.分析Java堆/6.线上故障排查基本操作/1.JVM 线上故障排查基本操作.md
+++ b/program/java/JVM/8.分析Java堆/6.线上故障排查基本操作/1.JVM 线上故障排查基本操作.md
@@ -33,7 +33,7 @@
 
 第二种情况就比较复杂了。GC 的健康问题。
 
-通常一个健康的 GC 是什么状态呢？根据楼主的经验，YGC 5秒一次左右，每次不超过50毫秒，FGC 最好没有，CMS GC 一天一次左右。
+通常一个健康的 GC 是什么状态呢？根据楼主的经验，`YGC 5秒一次左右，每次不超过50毫秒，FGC 最好没有，CMS GC 一天一次左右`。
 
 而 GC 的优化有2个维度，一是频率，二是时长。
 
