--- a/program/java/JVM/8.分析Java堆/6.线上故障排查基本操作/2.top+jstack分析cpu过高原因.md
+++ b/program/java/JVM/8.分析Java堆/6.线上故障排查基本操作/2.top+jstack分析cpu过高原因.md
@@ -1,9 +1,13 @@
-https://blog.csdn.net/ct29102656/article/details/51882946
 
-1、用ps -ef | grep tomcat-v3 查出tomcat运行的进程id 
-2、用top -Hp pid 查询进程下所有线程的运行情况（shift+p 按cpu排序，shift+m 按内存排序） 
+1. 用ps -ef | grep tomcat-v3 查出tomcat运行的进程id 
+2. 用top -Hp pid 查询进程下所有线程的运行情况（shift+p 按cpu排序，shift+m 按内存排序） 
 top -Hp 30316 
-3、找到cpu最高的pid，用printf ‘%x\n’ pid 转换为16进制 
-printf ‘%x\n’ 30506 
-4、用jstack 进程id | grep 16进制线程id 找到线程信息 
+3. 找到cpu最高的pid，用printf '%x\n' pid 转换为16进制 
+printf '%x\n' 30506 
+4. 用jstack 进程id | grep 16进制线程id 找到线程信息 
 jstack 30316 | grep -A 20 772a 
+
+
+## 参考
+
+1. https://blog.csdn.net/ct29102656/article/details/51882946
