--- a/program/java/JVM/7.介绍常用的JVM诊断和分析工具/jinfo/1.在运行时开启GC日志.md
+++ b/program/java/JVM/7.介绍常用的JVM诊断和分析工具/jinfo/1.在运行时开启GC日志.md
@@ -32,7 +32,7 @@ my-precious me$ jps
 my-precious me$ jinfo -flag +PrintGCDetails 12278
 my-precious me$ jinfo -flag +PrintGC 12278
 my-precious me$
-在jinfo中需要打开-XX:+PrintGC和 -XX:+PrintGCDetails两个选项才能开启GC日志，这与用命令行参数的方式实现有着细微的差别——如果你通过启动脚本（startup script）来设置参数，仅需-XX:+PrintGCDetails即可，因为-XX:+PrintGC会被自动打开。
+`在jinfo中需要打开-XX:+PrintGC和 -XX:+PrintGCDetails两个选项才能开启GC日志，这与用命令行参数的方式实现有着细微的差别——如果你通过启动脚本（startup script）来设置参数，仅需-XX:+PrintGCDetails即可，因为-XX:+PrintGC会被自动打开`。
 不过，从standard output的结果来看，PID为12278的进程的GC日志的确能够滚动地显示出来：
 [GC (Allocation Failure) [PSYoungGen: 876416K->102624K(909312K)] 1094420K->320820K(1161216K), 0.2173131 secs] [Times: user=0.74 sys=0.00, real=0.22 secs] 
 ...
