--- a/program/java/8.hadoop/13.mahout/2.classify-20newsgroups/1.Mahout0.9版本第八周作业.md
+++ b/program/java/8.hadoop/13.mahout/2.classify-20newsgroups/1.Mahout0.9版本第八周作业.md
@@ -127,6 +127,7 @@ mahout seq2sparse
 
 2、修改ClassifierDriver类，可参照mahout0.9源码中core里的org.apache.mahout.classifier.naivebayes.test.TestNaiveBayesDriver
 这步本来想像mahout一样通过-i、-o这种方式传参数进去的，但是getOption的时候总是报空指针异常，也没找到是哪的问题，所以直接把参数都写死在程序里了
+```java
 public class ClassifierDriver extends AbstractJob {
 
         public static void main(String[] args) throws Exception {
@@ -182,8 +183,9 @@ public class ClassifierDriver extends AbstractJob {
                 return -1;
         }
 }
-
+```
 3、修改Mapper，调用模型分类，并且按用户、类别进行计数
+```java
 public class ClassifierMapper extends Mapper<Text, VectorWritable, Text, IntWritable> {
 
         private Text outKey = new Text();
@@ -227,7 +229,7 @@ public class ClassifierMapper extends Mapper<Text, VectorWritable, Text, IntWrit
         NaiveBayesModel model = NaiveBayesModel.materialize(modelPath, conf);          
         classifier = new StandardNaiveBayesClassifier(model);  
         }
-复制代码
+```
 4、Reducer部分没有修改，输出格式跟讲课内容一致，用户ID|类别|次数，部分输出结果如下
 10511838|badminton|19
 10511838|basketball|1
