--- a/program/java/8.hadoop/2.bin-hadoop/3.windows下安装并启动hadoop2.7.2.md
+++ b/program/java/8.hadoop/2.bin-hadoop/3.windows下安装并启动hadoop2.7.2.md
@@ -4,17 +4,17 @@ https://www.cnblogs.com/wuxun1997/p/6847950.html
 
 core-site.xml
 
-复制代码
+```xml
 <configuration>
     <property>
         <name>fs.defaultFS</name>
         <value>hdfs://localhost:9000</value>
     </property>    
 </configuration>
-复制代码
+```
 hdfs-site.xml
 
-复制代码
+```xml
 <configuration>
     <property>
         <name>dfs.replication</name>
@@ -29,20 +29,20 @@ hdfs-site.xml
         <value>file:/hadoop/data/dfs/datanode</value>  
     </property>
 </configuration>
-复制代码
+```
 mapred-site.xml
 
-复制代码
+```xml
 <configuration>
     <property>
         <name>mapreduce.framework.name</name>
         <value>yarn</value>
     </property>
 </configuration>
-复制代码
+```
 yarn-site.xml
 
-复制代码
+```
 <configuration>
     <property>
         <name>yarn.nodemanager.aux-services</name>
@@ -53,10 +53,10 @@ yarn-site.xml
         <value>org.apache.hadoop.mapred.ShuffleHandler</value>
     </property>
 </configuration>
-复制代码
+```
 　　4、启动windows命令行窗口，进入hadoop-2.7.2\bin目录，执行下面2条命令，先格式化namenode再启动hadoop
 
-复制代码
+```
 D:\hadoop-2.7.2\bin>hadoop namenode -format
 
 D:\hadoop-2.7.2\bin>cd ..\sbin
@@ -73,7 +73,7 @@ D:\hadoop-2.7.2\sbin>jps
 7932 ResourceManager
 
 D:\hadoop-2.7.2\sbin>
-复制代码
+```
 　　通过jps命令可以看到4个进程都拉起来了，到这里hadoop的安装启动已经完事了。接着我们可以用浏览器到localhost:8088看mapreduce任务，到localhost:50070->Utilites->Browse the file system看hdfs文件。如果重启hadoop无需再格式化namenode，只要stop-all.cmd再start-all.cmd就可以了。
 
 　　上面拉起4个进程时会弹出4个窗口，我们可以看看这4个进程启动时都干了啥:
