--- a/program/java/4.spring-cloud/bus/3.spring.application.index=${random.long}.md
+++ b/program/java/4.spring-cloud/bus/3.spring.application.index=${random.long}.md
@@ -2,6 +2,7 @@ Spring cloud config 实例 - 三更 - CSDN博客 https://blog.csdn.net/yy7561271
 
 spring.application.index=${random.long}
 index: ${random.long} #解决 多实例相同端口的话，就只刷新一个端口，用index区分下
+# 解决 多实例相同端口不刷新的问题
 
 一.简介
 
