--- a/aliyun/云计算acp/弹性伸缩.md
+++ b/aliyun/云计算acp/弹性伸缩.md
@@ -1,7 +1,10 @@
 1. https://help.aliyun.com/product/25855.html
 
 # 1. 产品简介
-
 ## 1.1 什么是弹性伸缩
-
 https://help.aliyun.com/document_detail/25857.html
+# 4. 用户指南
+## 4.3 管理单个伸缩组
+### 4.3.2 实现自动伸缩
+* 创建伸缩规则
+https://help.aliyun.com/document_detail/25893.html
