--- a/aliyun/云计算acp/弹性伸缩.md
+++ b/aliyun/云计算acp/弹性伸缩.md
@@ -8,3 +8,6 @@ https://help.aliyun.com/document_detail/25857.html
 ### 4.3.2 实现自动伸缩
 * 创建伸缩规则
 https://help.aliyun.com/document_detail/25893.html
+# 7. 常见问题
+## 7.1 热点文章
+1. [伸缩配置规则FAQ](https://help.aliyun.com/knowledge_detail/25969.html)
