--- a/aliyun/云计算acp/弹性伸缩.md
+++ b/aliyun/云计算acp/弹性伸缩.md
@@ -3,11 +3,73 @@
 # 1. 产品简介
 ## 1.1 什么是弹性伸缩
 https://help.aliyun.com/document_detail/25857.html
+弹性伸缩根据您设置的伸缩规则，在业务需求增长时自动为您增加ECS实例以保证计算能力，在业务需求下降时自动减少ECS实例以节约成本。
+弹性伸缩必须和云服务器ECS一起使用。
+## 1.2 产品优势
+https://help.aliyun.com/document_detail/25859.html
+* 功能概述
+  * 根据客户业务需求自动调整ECS实例数量。
+  * 自动向负载均衡的后端服务器组中添加或移除相应的ECS实例。
+  * 自动向RDS访问白名单中添加或移除ECS实例的IP。
+* 产品特点
+  * `随需应变`：根据需求“恰到好处”地分配资源，`无需您提前预测需求变化，实时应对需求突增`。
+  * 自动化：无需人工干预，自动创建和释放ECS实例，`自动配置负载均衡和RDS访问白名单`。
+  * 伸缩模式丰富：`多模式兼容，可同时配置`定时、动态、自定义、固定、健康模式，可通过API对接外在监控系统。
+  * 智能：智能调度云计算资源，应对各种复杂场景。
+## 1.3 伸缩模式
+https://help.aliyun.com/document_detail/25860.html
+* 定时模式：您自定义自动伸缩发生的时间和频率，如每天 13：00增加 ECS 实例。
+* 动态模式：基于云监控性能指标（如 CPU 利用率），自动增加或减少 ECS 实例。
+* 固定数量模式：通过设置 最小实例数 （MinSize），即健康运行的ECS 实例最小数量，以保证可用性。
+* 自定义模式：通过 API 调用您的自有监控系统，您可以执行手工伸缩。
+* 手工执行伸缩规则。
+  * 手工添加或移出既有的 ECS 实例。
+  * 自定义 MinSize、MaxSize，弹性伸缩会自动创建或释放 ECS 实例，将当前 ECS 实例数维持在 MinSize 与 MaxSize 之间。
+  * 健康模式：如 ECS 实例为非 running 状态，弹性伸缩将自动移出或释放不健康的 ECS 实例。
+* `多模式并行：以上所有模式都可以组合配置`。例如设置了每天 13：00 ~ 14：00 创建 20 个 ECS 实例以应对业务高峰，但实际需求有可能需要多于20个实例， 则您可以选择其他伸缩模式，与定时模式配合一起使用。
 # 4. 用户指南
+## 4.1 使用须知
+### 4.1.10 数量限制
+https://help.aliyun.com/document_detail/25920.html
+* 一个账号下最多创建 20 个伸缩组。
+* 一个伸缩组内最多创建 10 个伸缩配置。
+* 一个伸缩组内最多创建 50 个伸缩规则。
+* 一个伸缩组内最多创建 6 个事件通知。
+* 一个伸缩组内最多创建 6 个生命周期挂钩。
+* 对于所有地域和所有伸缩组，一个账号下最多弹性伸缩 1000 台 ECS 实例。此数量只包含自动创建的 ECS 实例，不包含手动添加的 ECS 实例。
+* 一个账号下最多创建 20 个定时任务。
+### 4.1.11 注意事项
+https://help.aliyun.com/document_detail/25880.html
+> 伸缩活动
+* 同一伸缩组内、同一时刻只能有一个伸缩活动在执行
+* 伸缩活动不可以中断
+> 冷却时间
+* 在冷却时间内，伸缩组只会拒绝云监控报警任务类型的伸缩活动请求，其他类型的触发任务（如用户手工执行伸缩规则、定时任务等）可以绕过冷却时间立即执行伸缩活动。
+* 每个伸缩活动的最后一个 ECS 实例加入或移出伸缩组成功后，整个伸缩组冷却时间才开始计时。
 ## 4.3 管理单个伸缩组
 ### 4.3.2 实现自动伸缩
-* 创建伸缩规则
-https://help.aliyun.com/document_detail/25893.html
+[创建伸缩规则](https://help.aliyun.com/document_detail/25893.html)
+如果执行伸缩规则后，伸缩组内服务中实例数将大于 伸缩最大实例数 或者小于 伸缩最小实例数，弹性伸缩服务会自动调整扩张或收缩的 ECS 实例数量，保证弹性伸缩结果不会超过数量限制。
+> 示例
+* 您拥有一个伸缩组 asg-bp19ik2u5w7esjcucu28，伸缩最大实例数为 3，伸缩规则 add3 为增加 3 台实例。如果当前服务中实例数为 2，执行伸缩规则 add3 时，仅会增加 1 台 ECS 实例。
+* 您拥有一个伸缩组 asg-bp19ik2u5w7esjcucu28，伸缩最小实例数为 2，伸缩规则 reduce2 为减少 2 台实例。如果当前服务中实例数为 3，执行伸缩规则 reduce2 时，仅会减少 1 台 ECS 实例。
+## 4.4 定时任务 
+### 4.4.1 创建定时任务
+https://help.aliyun.com/document_detail/25904.html
+由于在同一时刻一个伸缩组中只能存在一个伸缩活动，定时任务还提供了自动重试时间设置功能，避免因为单次执行伸缩规则失败影响定时任务的结果。`如果同一分钟内存在多个待执行的定时任务，弹性伸缩会执行最新创建的定时任务`。
+# 6. 开发指南
+## 6.10 触发任务
+### 6.10.2 添加ECS实例
+https://help.aliyun.com/document_detail/25954.html
+往指定的伸缩组添加ECS实例。加入的ECS实例的限定条件包括：
+* 加入的ECS实例必须与伸缩组在同一个地域。
+* 加入的ECS实例必须是`running`状态。
+* 加入的ECS实例不能已加入到其它伸缩组中。
+* 加入的ECS实例支持包年包月和按量付费两种类型。
+* 如果伸缩组指定VswitchID，则不支持Classic类型的ECS实例加入伸缩组，也不支持其他VPC的ECS实例加入伸缩组。
+* 如果伸缩组没有指定VswitchID，则不支持VPC类型的ECS实例加入伸缩组。
 # 7. 常见问题
 ## 7.1 热点文章
 1. [伸缩配置规则FAQ](https://help.aliyun.com/knowledge_detail/25969.html)
+> 一个伸缩组可以添加多种规格的ECS实例吗？
+不可以。一个伸缩组只能设置一种伸缩配置ECS实例规格。不过，您可以设置多个伸缩组，每个伸缩组设置不同的ECS实例规格。
