--- a/aliyun/云计算acp/弹性伸缩.md
+++ b/aliyun/云计算acp/弹性伸缩.md
@@ -43,8 +43,9 @@ https://help.aliyun.com/document_detail/25880.html
 > 伸缩活动
 * 同一伸缩组内、同一时刻只能有一个伸缩活动在执行
 * 伸缩活动不可以中断
+* 伸缩活动有 ECS 实例加入伸缩组失败时，需要保持 ECS 实例级事务的完整性，而非伸缩活动级事务的完整性，即`只进行 ECS 实例级回滚`，而不是伸缩活动级回滚。例如，当伸缩组创建了 20 台 ECS 实例，但只有 19 台 ECS 实例成功加入负载均衡时，则只对不成功的 1 台 ECS 实例进行自动释放操作。
 > 冷却时间
-* 在冷却时间内，伸缩组只会拒绝云监控报警任务类型的伸缩活动请求，其他类型的触发任务（如用户手工执行伸缩规则、定时任务等）可以绕过冷却时间立即执行伸缩活动。
+* `在冷却时间内，伸缩组只会拒绝云监控报警任务类型的伸缩活动请求`，其他类型的触发任务（如用户手工执行伸缩规则、定时任务等）可以绕过冷却时间立即执行伸缩活动。
 * 每个伸缩活动的最后一个 ECS 实例加入或移出伸缩组成功后，整个伸缩组冷却时间才开始计时。
 ## 4.3 管理单个伸缩组
 ### 4.3.2 实现自动伸缩
@@ -56,7 +57,7 @@ https://help.aliyun.com/document_detail/25880.html
 ## 4.4 定时任务 
 ### 4.4.1 创建定时任务
 https://help.aliyun.com/document_detail/25904.html
-由于在同一时刻一个伸缩组中只能存在一个伸缩活动，定时任务还提供了自动重试时间设置功能，避免因为单次执行伸缩规则失败影响定时任务的结果。`如果同一分钟内存在多个待执行的定时任务，弹性伸缩会执行最新创建的定时任务`。
+* 由于在同一时刻一个伸缩组中只能存在一个伸缩活动，定时任务还提供了自动重试时间设置功能，避免因为单次执行伸缩规则失败影响定时任务的结果。`如果同一分钟内存在多个待执行的定时任务，弹性伸缩会执行最新创建的定时任务`。
 # 6. 开发指南
 ## 6.10 触发任务
 ### 6.10.2 添加ECS实例
@@ -72,4 +73,4 @@ https://help.aliyun.com/document_detail/25954.html
 ## 7.1 热点文章
 1. [伸缩配置规则FAQ](https://help.aliyun.com/knowledge_detail/25969.html)
 > 一个伸缩组可以添加多种规格的ECS实例吗？
-不可以。一个伸缩组只能设置一种伸缩配置ECS实例规格。不过，您可以设置多个伸缩组，每个伸缩组设置不同的ECS实例规格。
+不可以。一个伸缩组只能设置一种伸缩配置ECS实例规格。不过，您可以`设置多个伸缩组`，每个伸缩组设置不同的ECS实例规格。
