--- a/aliyun/云计算acp/弹性伸缩.md
+++ b/aliyun/云计算acp/弹性伸缩.md
@@ -27,6 +27,28 @@ https://help.aliyun.com/document_detail/25860.html
   * 自定义 MinSize、MaxSize，弹性伸缩会自动创建或释放 ECS 实例，将当前 ECS 实例数维持在 MinSize 与 MaxSize 之间。
   * 健康模式：如 ECS 实例为非 running 状态，弹性伸缩将自动移出或释放不健康的 ECS 实例。
 * `多模式并行：以上所有模式都可以组合配置`。例如设置了每天 13：00 ~ 14：00 创建 20 个 ECS 实例以应对业务高峰，但实际需求有可能需要多于20个实例， 则您可以选择其他伸缩模式，与定时模式配合一起使用。
+## 1.6 名词解释
+https://help.aliyun.com/document_detail/25858.html
+> 弹性伸缩
+  * 弹性伸缩是根据用户的业务需求和策略，自动调整其弹性计算资源的管理服务。其能够在业务增长时自动增加 ECS 实例，并在业务下降时自动减少 ECS 实例。
+> 伸缩组
+  * 伸缩组是具有相同应用场景的 ECS 实例的集合。`伸缩组定义了组内 ECS 实例数的最大值、最小值及其相关联的负载均衡实例和 RDS 实例等属性`。
+> 伸缩配置
+  * `伸缩配置定义了用于弹性伸缩的 ECS 实例的配置信息`。
+> 伸缩规则
+  * `伸缩规则定义了具体的扩展或收缩操作`，例如加入或移出 N 个 ECS 实例。
+> 伸缩活动
+  * 伸缩规则成功触发后，就会产生一条伸缩活动。伸缩活动主要用来描述伸缩组内 ECS 实例的变化情况。
+> 伸缩触发任务
+  * 用于触发伸缩规则的任务，如定时任务、云监控的报警任务。
+> 冷却时间
+  * 冷却时间是指，在同一伸缩组内，一个伸缩活动执行完成后的一段锁定时间。在这段锁定时间内，该伸缩组不执行其他的伸缩活动。
+> 备注
+  * 伸缩组包含伸缩配置、伸缩规则、伸缩活动。
+  * 伸缩配置、伸缩规则、伸缩活动依赖伸缩组的生命周期管理，删除伸缩组的同时会删除与伸缩组相关联的伸缩配置、伸缩规则和伸缩活动。
+  * 伸缩触发任务有定时任务、云监控报警任务等类型。
+  * 定时任务独立于伸缩组存在，不依赖伸缩组的生命周期管理，删除伸缩组不会删除定时任务。
+  * 云监控报警任务独立于伸缩组存在，不依赖伸缩组的生命周期管理，删除伸缩组不会删除报警任务。
 # 4. 用户指南
 ## 4.1 使用须知
 ### 4.1.10 数量限制
@@ -62,15 +84,16 @@ https://help.aliyun.com/document_detail/25904.html
 ## 6.10 触发任务
 ### 6.10.2 添加ECS实例
 https://help.aliyun.com/document_detail/25954.html
-往指定的伸缩组添加ECS实例。加入的ECS实例的限定条件包括：
-* 加入的ECS实例必须与伸缩组在同一个地域。
-* 加入的ECS实例必须是`running`状态。
-* 加入的ECS实例不能已加入到其它伸缩组中。
-* 加入的ECS实例支持包年包月和按量付费两种类型。
-* 如果伸缩组指定VswitchID，则不支持Classic类型的ECS实例加入伸缩组，也不支持其他VPC的ECS实例加入伸缩组。
-* 如果伸缩组没有指定VswitchID，则不支持VPC类型的ECS实例加入伸缩组。
+> 往指定的伸缩组添加ECS实例。加入的ECS实例的限定条件包括：
+  * 加入的ECS实例必须与伸缩组在同一个地域。
+  * 加入的ECS实例必须是`running`状态。
+  * 加入的ECS实例不能已加入到其它伸缩组中。
+  * 加入的ECS实例支持包年包月和按量付费两种类型。
+  * 如果伸缩组指定VswitchID，则不支持Classic类型的ECS实例加入伸缩组，也不支持其他VPC的ECS实例加入伸缩组。
+  * 如果伸缩组没有指定VswitchID，则不支持VPC类型的ECS实例加入伸缩组。
 # 7. 常见问题
 ## 7.1 热点文章
 1. [伸缩配置规则FAQ](https://help.aliyun.com/knowledge_detail/25969.html)
 > 一个伸缩组可以添加多种规格的ECS实例吗？
-不可以。一个伸缩组只能设置一种伸缩配置ECS实例规格。不过，您可以`设置多个伸缩组`，每个伸缩组设置不同的ECS实例规格。
+  * 不可以。`一个伸缩组只能设置一种伸缩配置ECS实例规格`。不过，您可以`设置多个伸缩组`，每个伸缩组设置不同的ECS实例规格。
+  * 创建的ECS配置都是相同的
