--- a/aliyun/云计算acp/2.对象存储OSS.md
+++ b/aliyun/云计算acp/2.对象存储OSS.md
@@ -15,11 +15,11 @@ https://help.aliyun.com/document_detail/31819.html
 # 2. 产品定价
 ## 2.2 计量项和计费项
 https://help.aliyun.com/document_detail/59636.html
-OSS产品的账单费用由以下四部分组成。其中，数据处理会根据您的使用情况单独计量计费，不使用不计费。
-1. 存储费用
-2. 流量费用
-3. 请求费用
-4. 数据处理费用
+> OSS产品的账单费用由以下四部分组成。其中，数据处理会根据您的使用情况单独计量计费，不使用不计费。
+  1. 存储费用
+  2. 流量费用
+  3. 请求费用
+  4. 数据处理费用
 # 3. 快速入门 
 ## 3.4 创建存储空间
 https://help.aliyun.com/document_detail/31885.html
