--- a/aliyun/云计算acp/3.弹性伸缩.md
+++ b/aliyun/云计算acp/3.弹性伸缩.md
@@ -5,6 +5,8 @@
 https://help.aliyun.com/document_detail/25857.html
 弹性伸缩根据您设置的伸缩规则，在业务需求增长时自动为您增加ECS实例以保证计算能力，在业务需求下降时自动减少ECS实例以节约成本。
 弹性伸缩必须和云服务器ECS一起使用。
+> 弹性自愈
+  * 当检测到某台ECS实例处于不健康状态时。弹性伸缩`自动释放不健康ECS实例并创建新的ECS实例`，自动添加新ECS实例到负载均衡实例和RDS实例的访问白名单中。更多详情，请参阅 移出不健康ECS实例。
 ## 1.2 产品优势
 https://help.aliyun.com/document_detail/25859.html
 * 功能概述
@@ -63,23 +65,30 @@ https://help.aliyun.com/document_detail/25920.html
 ### 4.1.11 注意事项
 https://help.aliyun.com/document_detail/25880.html
 > 伸缩活动
-* 同一伸缩组内、同一时刻只能有一个伸缩活动在执行
-* 伸缩活动不可以中断
-* 伸缩活动有 ECS 实例加入伸缩组失败时，需要保持 ECS 实例级事务的完整性，而非伸缩活动级事务的完整性，即`只进行 ECS 实例级回滚`，而不是伸缩活动级回滚。例如，当伸缩组创建了 20 台 ECS 实例，但只有 19 台 ECS 实例成功加入负载均衡时，则只对不成功的 1 台 ECS 实例进行自动释放操作。
+  * 同一伸缩组内、同一时刻只能有一个伸缩活动在执行
+  * 伸缩活动不可以中断
+  * 伸缩活动有 ECS 实例加入伸缩组失败时，需要保持 ECS 实例级事务的完整性，而非伸缩活动级事务的完整性，即`只进行 ECS 实例级回滚`，而不是伸缩活动级回滚。例如，当伸缩组创建了 20 台 ECS 实例，但只有 19 台 ECS 实例成功加入负载均衡时，则只对不成功的 1 台 ECS 实例进行自动释放操作。
 > 冷却时间
-* `在冷却时间内，伸缩组只会拒绝云监控报警任务类型的伸缩活动请求`，其他类型的触发任务（如用户手工执行伸缩规则、定时任务等）可以绕过冷却时间立即执行伸缩活动。
-* 每个伸缩活动的最后一个 ECS 实例加入或移出伸缩组成功后，整个伸缩组冷却时间才开始计时。
+  * `在冷却时间内，伸缩组只会拒绝云监控报警任务类型的伸缩活动请求`，其他类型的触发任务（如用户手工执行伸缩规则、定时任务等）可以绕过冷却时间立即执行伸缩活动。
+  * 每个伸缩活动的最后一个 ECS 实例加入或移出伸缩组成功后，整个伸缩组冷却时间才开始计时。
 ## 4.3 管理单个伸缩组
 ### 4.3.2 实现自动伸缩
-[创建伸缩规则](https://help.aliyun.com/document_detail/25893.html)
+1. [创建伸缩组](https://help.aliyun.com/document_detail/25882.html)
+  * 伸缩组、SLB 实例和 RDS 实例必须位于同一个地域。
+2. [创建伸缩规则](https://help.aliyun.com/document_detail/25893.html)
 如果执行伸缩规则后，伸缩组内服务中实例数将大于 伸缩最大实例数 或者小于 伸缩最小实例数，弹性伸缩服务会自动调整扩张或收缩的 ECS 实例数量，保证弹性伸缩结果不会超过数量限制。
 > 示例
-* 您拥有一个伸缩组 asg-bp19ik2u5w7esjcucu28，伸缩最大实例数为 3，伸缩规则 add3 为增加 3 台实例。如果当前服务中实例数为 2，执行伸缩规则 add3 时，仅会增加 1 台 ECS 实例。
-* 您拥有一个伸缩组 asg-bp19ik2u5w7esjcucu28，伸缩最小实例数为 2，伸缩规则 reduce2 为减少 2 台实例。如果当前服务中实例数为 3，执行伸缩规则 reduce2 时，仅会减少 1 台 ECS 实例。
+  * 您拥有一个伸缩组 asg-bp19ik2u5w7esjcucu28，伸缩最大实例数为 3，伸缩规则 add3 为增加 3 台实例。如果当前服务中实例数为 2，执行伸缩规则 add3 时，仅会增加 1 台 ECS 实例。
+  * 您拥有一个伸缩组 asg-bp19ik2u5w7esjcucu28，伸缩最小实例数为 2，伸缩规则 reduce2 为减少 2 台实例。如果当前服务中实例数为 3，执行伸缩规则 reduce2 时，仅会减少 1 台 ECS 实例。
 ## 4.4 定时任务 
 ### 4.4.1 创建定时任务
 https://help.aliyun.com/document_detail/25904.html
 * 由于在同一时刻一个伸缩组中只能存在一个伸缩活动，定时任务还提供了自动重试时间设置功能，避免因为单次执行伸缩规则失败影响定时任务的结果。`如果同一分钟内存在多个待执行的定时任务，弹性伸缩会执行最新创建的定时任务`。
+## 4.5 报警任务
+### 4.5.1 弹性伸缩创建报警任务
+https://help.aliyun.com/document_detail/74853.html
+https://bbs.aliyun.com/read/557206.html
+* 根据传入参数创建报警任务。`报警任务名称在用户账号下唯一。如果该报警任务名称已经存在，则用新的值进行替换`。
 # 6. 开发指南
 ## 6.10 触发任务
 ### 6.10.2 添加ECS实例
