--- a/aliyun/云计算acp/4.负载均衡SLB.md
+++ b/aliyun/云计算acp/4.负载均衡SLB.md
@@ -57,12 +57,40 @@ https://help.aliyun.com/document_detail/27635.html
   * abnormal：后端服务器不健康。
   * `unavailable`：未完成健康检查。
 # 8 扩展阅读
+## 8.1 最佳实践
+https://help.aliyun.com/document_detail/27704.html
+> 负载均衡服务提供会话保持功能。开启会话保持功能后，负载均衡会将会话期间内来自同一客户端的访问请求分发到同一台后端服务器上进行处理。
+  * 四层监听的会话保持是`基于IP地址`的会话保持，负载均衡监听器会将来自同一IP地址的请求转发到同一个后端ECS上；
+  * 而七层监听是`基于Cookie`的会话保持。
 ## 8.2 常见问题
+### 8.2.2 负载均衡常见问题
+https://help.aliyun.com/knowledge_detail/55193.html
+> 负载均衡支持哪些调度算法？
+  * 可以使用轮询、加权轮询（WRR）、加权最小连接数（WLC）这三种调度方法：
+    * 轮询：按照访问次数依次将外部请求依序分发到后端ECS上。
+    * 加权轮询：您可以对每台后端服务器设置权重值，权重值越高的服务器，被轮询到的次数（概率）也越高。
+    * 加权最小连接数：除了根据每台后端服务器设定的权重值来进行轮询，同时还考虑后端服务器的实际负载（即连接数）。当权重值相同时，当前连接数越小的后端服务器被轮询到的次数（概率）也越高。
+> 如何避免负载均衡服务本身的故障问题？
+  * 添加不同可用区的ECS实例作为负载均衡实例的后端服务器，从而提高本地可用性。
+  * 在同一地域创建多个负载均衡实例，通过DNS轮询的方式对外提供服务，从而提高本地可用性。
+  * 在不同地域创建多个负载均衡实例，通过DNS轮询的方式对外提供服务，从而提高跨地域的可用性。
+### 8.2.8 为什么请求不均衡
+https://help.aliyun.com/knowledge_detail/66280.html
+> 负载均衡请求不均衡的原因可能有以下几种可能：
+  * 开启了`会话保持`功能
+    * 配置了会话保持，当访问负载均衡实例的客户端又很少时，容易导致不均衡，尤其在使用少量客户端对负载均衡进行测试的时候。比如TCP监听，开启了会话保持（四层是基于来源地址做会话保持），使用一台客户端对负载均衡实例进行压测，就会导致不均衡。
+  * ECS`健康检查`异常
+    * 后端服务器ECS的健康建状态异常会导致不均衡，尤其在压测的时候容易忽略后端服务器ECS的健康检查状态，如果有后端服务器ECS健康检查失败或者健康检查状态经常跳跃（好到坏，又从坏到好，反复变化）必然会导致不均衡。
+  * TCP Keepalive保持长连接
+    * 后端服务器ECS有些开启了TCP Keepalive保持长连接，而有些又没有开启，则连接会在保持长连接的后端服务器上堆积，造成不均衡。
+> 排查和解决方法
+  * 查看后端各台ECS的权重是否相同；
+  * 在相关时间段内是否有健康检查失败或波动现象，查找波动的原因；或者健康检查没有配置正确的响应码2xx，3xx导致了健康检查显示正常，但后端服务有异常；
+  * 是否同时使用了加权最小连接数（WLC）调度方式和会话保持，如果是，尝试改为加权加权轮询（WRR）算法和会话保持。
 ### 8.2.12 HTTPS/HTTP监听常见问题
 https://help.aliyun.com/knowledge_detail/55201.html
 7. 可以使用PKCS#12（PFX）格式的证书么？
 可以。但在上传证书前，您需要将证书转换为PEM格式，详情参见转换证书格式。
-
 # 其他
 [SLB 配置获取真实IP](https://help.aliyun.com/knowledge_detail/60529.html)
 X-Forwarded-For 是一个 HTTP 扩展头部，用来表示 HTTP 请求端真实 IP。
