--- a/aliyun/云计算acp/安骑士.md
+++ b/aliyun/云计算acp/安骑士.md
@@ -3,6 +3,10 @@
 # 1. 产品简介
 ## 1.2 功能列表
 https://help.aliyun.com/document_detail/31770.html
+## 1.3 产品优势
+https://help.aliyun.com/document_detail/28454.html
+> 跨平台支持
+  * 支持所有Linux和Windows主流操作系统、`支持阿里云经典网络环境、阿里云VPC环境、混合云环境、传统IDC环境`。
 # 4. 用户指南
 ## 4.1 Agent插件
 ### 4.1.2 安装Agent
