--- a/aliyun/云计算acp/1.云服务器ECS.md
+++ b/aliyun/云计算acp/1.云服务器ECS.md
@@ -121,8 +121,8 @@ https://help.aliyun.com/document_detail/25446.html
   * 实例状态必须为 `运行中（Running）或者 已停止（Stopped），不能为 已锁定（Locked）`。
   * 实例不欠费。
   * 挂载云盘时，云盘的状态必须为 `待挂载（Available）`。
-  * 云盘只能挂载到同一地域下同一可用区内的实例上，不能跨可用区挂载。
-  * 一台ECS实例最多能挂载16块云盘作数据盘用，同一时刻，一块云盘只能挂载到一个台实例上。
+  * 云盘只能挂载到同一地域下同一可用区内的实例上，`不能跨可用区挂载`。
+  * 一台ECS实例`最多能挂载16块云盘`作数据盘用，`同一时刻，一块云盘只能挂载到一个台实例上`。
   * 独立创建的云盘能挂载到同一地域下同一可用区的任意实例上（包括预付费和按量付费的实例）。
 ### 5.6.10 更换系统盘
 https://help.aliyun.com/document_detail/50134.html
@@ -154,6 +154,14 @@ https://help.aliyun.com/document_detail/54789.html
 1. [使用快照创建自定义镜像](https://help.aliyun.com/document_detail/25460.html)
 您可以使用快照创建自定义镜像，将快照的操作系统、数据环境信息完整的包含在镜像中。然后使用自定义镜像创建多台具有相同操作系统和数据环境信息的实例，非常方便的复制实例
 快照 -> 镜像 -> 实例
+> Linux实例注意事项
+  * 在使用Linux实例的系统盘创建自定义镜像时，`不要`在 /etc/fstab 文件中`加载数据盘的信息`，否则使用该镜像创建的实例无法启动。
+  * 强烈建议您在制作自定义镜像前 umount Linux实例上挂载的所有文件系统，然后再对系统盘打快照并创建自定义镜像，否则有可能造成以该自定义镜像  * 创建的ECS实例不能启动或使用。
+  * `请勿随意升级内核或操作系统版本`。
+  * 请勿调整系统盘分区。系统盘目前只支持单个根分区。
+  * 请检查系统盘使用剩余空间，确保系统盘没有被写满。
+  * 请勿修改关键系统文件，如 /sbin、/bin、/lib 目录等。
+  * 请勿修改默认登录用户名 root。
 2. [使用实例创建自定义镜像](https://help.aliyun.com/document_detail/35109.html)
 ## 5.9 安全组
 ### 5.9.4 创建安全组
@@ -203,10 +211,10 @@ https://help.aliyun.com/document_detail/25535.html
 ### 10.2.2 块存储
 1. [ECS云服务器磁盘FAQ](https://help.aliyun.com/knowledge_detail/40558.html)
 > 云服务器磁盘I/O速度是多少？
-* 普通云盘写一般在 20-30MB/s，读一般在 80-100MB/s。
-* 本地SSD盘512KB顺序读写应用，可提供高达300MB/s的吞吐量能力。
+  * 普通云盘写一般在 20-30MB/s，读一般在 80-100MB/s。
+  * 本地SSD盘512KB顺序读写应用，可提供高达300MB/s的吞吐量能力。
 > Linux 购买了数据盘，但是系统中看不到怎么办？
-* Linux 数据需要分区-格式化-挂载后才能使用和看到空间，挂载数据盘参考 格式化和挂载数据盘。
+  * Linux 数据需要分区-格式化-挂载后才能使用和看到空间，挂载数据盘参考 格式化和挂载数据盘。
 2. [ECS系统盘和数据盘二次分区FAQ](https://help.aliyun.com/knowledge_detail/40566.html)
 > 系统盘能否再次划分出一个分区用作数据存储？
 出于系统安全和稳定性考虑，`阿里云官方不支持系统盘二次分区`，不管是Windows还是Linux。`如果用户强行使用第三方工具进行二次分区操作，可能引发未知风险`，如系统崩溃，数据丢失等。
@@ -219,8 +227,14 @@ https://help.aliyun.com/knowledge_detail/40609.html
 ### 10.2.5 安全组
 1. [安全组使用 FAQ](https://help.aliyun.com/knowledge_detail/40570.html)
 > 什么是安全组？
-* 安全组是一种虚拟防火墙。用于设置单台或多台云服务器的网络访问控制，它是重要的网络安全隔离手段，您可以在云端划分安全域。
-* `每个实例至少属于一个安全组`，在创建的时候就需要指定。`同一安全组内的实例之间网络互通，不同安全组的实例之间默认内网不通，可以授权两个安全组之间互访`。
+  * 安全组是一种虚拟防火墙。用于设置单台或多台云服务器的网络访问控制，它是重要的网络安全隔离手段，您可以在云端划分安全域。
+  * `每个实例至少属于一个安全组`，在创建的时候就需要指定。`同一安全组内的实例之间网络互通，不同安全组的实例之间默认内网不通，可以授权两个安全组之间互访`。
+2. [安全组新使用限制 FAQ](https://help.aliyun.com/knowledge_detail/87018.html)  
+> 可以调整安全组规则的数量上限吗？
+  * 不可以，每个安全组最多可以包含 100 条安全组规则。
+  * 目前，一个实例中的每个弹性网卡默认最多可以加入 5 个安全组，所以一个实例的每个弹性网卡最多可以包含 500 条安全组规则，能够满足绝大多数场景的需求。
+> 为何实例加入安全组时出现超限提示？
+  * `作用于一台实例（主网卡）的安全组规则数量上限` = 该实例允许加入的安全组数量 x 每个安全组最大规则数量。
 ### 10.2.6 网络 
 [BGP机房介绍](https://help.aliyun.com/knowledge_detail/40677.html)
 使用BGP协议互联后，网络运营商的所有骨干路 由设备将会判断到IDC机房IP段的最佳路由，以保证不同网络运营商用户的高速访问
