--- a/aliyun/云计算acp/2.对象存储OSS.md
+++ b/aliyun/云计算acp/2.对象存储OSS.md
@@ -25,6 +25,14 @@ https://help.aliyun.com/document_detail/59636.html
 https://help.aliyun.com/document_detail/31885.html
 * 存储空间创建后`无法更换所属地域`
 # 4. 开发指南
+## 4.2 基本概念介绍
+https://help.aliyun.com/document_detail/31827.html
+> 存储空间（Bucket）
+  * 存储空间是您用于存储对象（Object）的容器，所有的对象都必须隶属于某个存储空间。您可以设置和修改存储空间属性用来控制地域、访问权限、生命周期等，这些属性设置直接作用于该存储空间内所有对象，因此您可以通过灵活创建不同的存储空间来完成不同的管理功能。
+  * 同一个存储空间的内部是扁平的，没有文件系统的目录等概念，所有的对象都直接隶属于其对应的存储空间。
+  * 每个用户可以拥有多个存储空间。
+  * 存储空间的名称`在 OSS 范围内必须是全局唯一的，一旦创建之后无法修改名称`。
+  * 存储空间内部的对象数目没有限制。
 ## 4.6 访问与控制
 ### 4.6.3 绑定自定义域名
 https://help.aliyun.com/document_detail/31836.html
@@ -83,6 +91,11 @@ https://help.aliyun.com/document_detail/31902.html
 > 说明
   * 您绑定的域名需在`工信部备案`，否则域名访问将会受到影响。
   * 每个存储空间最多可以绑定20个域名。
+## 8.6 管理碎片
+https://help.aliyun.com/document_detail/31916.html
+> 什么是碎片
+  * 碎片（Part）是用户使用Multipart Upload上传模式时，将Object切成的若干个的Part，我们将这些Part称为碎片。您将这些Part上传到OSS服务端后，可以调用Complete Multipart Upload将这些碎片（Part）组合成一个完整的Object。
+> 碎片管理
 # 9 图片处理指南
 ## 9.1 快速使用OSS图片服务
 https://help.aliyun.com/document_detail/44686.html
