--- a/aliyun/云计算acp/4.负载均衡SLB.md
+++ b/aliyun/云计算acp/4.负载均衡SLB.md
@@ -32,6 +32,21 @@ https://help.aliyun.com/document_detail/86438.html
 ### 5.2.8 监听介绍
 https://help.aliyun.com/document_detail/85943.html
 * 负载均衡提供四层（TCP/UDP协议）和七层（HTTP/HTTPS协议）监听
+## 5.3 健康检查
+### 5.3.1 健康检查介绍
+https://help.aliyun.com/document_detail/85958.html
+> UDP监听的检查机制如下：
+  * LVS节点服务器根据监听的健康检查配置，向后端ECS的内网IP+【健康检查端口】发送UDP报文。
+  * 如果后端ECS相应端口未正常监听，则系统会返回类似返回 port XX unreachable的ICMP报错信息；反之不做任何处理。
+  * 如果在【响应超时时间】之内，LVS节点服务器收到了后端ECS返回的上述错误信息，则认为服务异常，判定健康检查失败。
+  * 如果在【响应超时时间】之内，LVS节点服务器没有收到后端ECS返回的任何信息，则认为服务正常，判定健康检查成功。
+> 健康检查时间窗
+  * 健康检查机制的引入，有效提高了业务服务的可用性。但是，为了避免频繁的健康检查失败引起的切换对系统可用性的冲击，健康检查只有在健康检查时间窗内连续多次检查成功或失败后，才会进行状态切换。健康检查时间窗由以下三个因素决定：
+    * 健康检查间隔 (每隔多久进行一次健康检查)
+    * `响应超时时间` (等待服务器返回健康检查的时间)
+    * 检查阈值 (健康检查连续成功或失败的次数)
+  * 健康检查时间窗的计算方法如下：
+    * 健康检查失败时间窗=响应超时时间×不健康阈值+检查间隔×(不健康阈值-1)
 ## 5.5 转换证书格式
 ### 5.5.5 转换证书格式
 https://help.aliyun.com/document_detail/85970.html
@@ -74,6 +89,10 @@ https://help.aliyun.com/knowledge_detail/55193.html
   * 添加不同可用区的ECS实例作为负载均衡实例的后端服务器，从而提高本地可用性。
   * 在同一地域创建多个负载均衡实例，通过DNS轮询的方式对外提供服务，从而提高本地可用性。
   * 在不同地域创建多个负载均衡实例，通过DNS轮询的方式对外提供服务，从而提高跨地域的可用性。
+### 8.2.4 健康检查常见问题
+https://help.aliyun.com/knowledge_detail/55205.html
+> 3. 是否可以关闭健康检查？
+  * 您`只可能关闭HTTP/HTTPS监听的健康检查，不能关闭TCP/UDP监听的健康检查`
 ### 8.2.8 为什么请求不均衡
 https://help.aliyun.com/knowledge_detail/66280.html
 > 负载均衡请求不均衡的原因可能有以下几种可能：
